# midas-journal-850

__MACOSX/landmarkIds/: ._itkQuadEdgeMeshSphericalThinPlateSplineFilter.txx
__MACOSX/landmarkIds/Data/: ._LandmarkIDsOnFixedIC1.txt
landmarkIds/: CMakeLists.txt  LandmarkIds.cxx  itkQuadEdgeMeshSphericalThinPlateSplineFilter.h  itkQuadEdgeMeshSphericalThinPlateSplineFilter.txx
landmarkIds/Data/: LandmarkIDsOnFixedIC1.txt
